KiCad ChangeLog 2009
====================

Please add newer entries at the top, list the date and your name with
email address.

2010-Jan-12 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++All
    Use wxAutoBufferedPaintDC in OnPaint event
    Seems solves slow grid redraw on some PC (tested under Window 7)
    and is faster than use wxPaintDC, not buffered
    (note MACOSX has natively a double buffer, so no change for MACOSX)

2010-Jan-08 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++Gerbview
    Added support of arcs in polygons outlines.
    Needed to show copper areas in some gerber files
    Not fully tested but works better than without this support...


2010-Jan-03 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++pcbnew
    - fixed a potential bug in a fill zone function: AddClearanceAreasPolygonsToPolysList()
    - Try to fix a problem with AddClearanceAreasPolygonsToPolysList() under Window Vista and Window 7
      This is perhaps a problem in kbool library
      (a bug in Bool_Engine destructor ?)
      It happens when:
      - a lot of polygon corners are added in group A
      - nothing in group B
      - No operation asked in kbool engine ( that also has a bug if an operation is asked
        with no polygon in group B)
      - and call the Bool_Engine destructor.
      Could be a stack error or overflow, very hard to locate and debug.
      - Under Vista seems create always a crash.
      - Under Window 7 sometimes create a crash.
      - No problem under XP and Linux.
    -Workaround:
      Leave the group A void if group B is void.
      I am not sure this change fix the problem.