@@ -23,13 +23,20 @@ WinEDA_Toolbar::WinEDA_Toolbar( id_toolbar type, wxWindow * parent,
 #endif
 {
     m_Parent = parent;
-    Pnext = NULL;
     m_Ident = type;
     m_Horizontal = horizontal;
-    m_Size = 24;
 
     SetToolBitmapSize(wxSize(16,16));
     SetMargins(0,0);
     SetToolSeparation(1);
     SetToolPacking(1);
+}
+
+
+int WinEDA_Toolbar::GetDimension( )
+{
+    if( m_Horizontal )
+        return GetSize().y;
+    else
+        return GetSize().x;
 }
